--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1068,3 +1068,4 @@ h2 img { vertical-align:middle; }
 .icon-renew { background-image: url(../images/role/min_renew.jpg); padding-left: 30px; min-height:21px;}
 .icon-exp { background-image: url(../images/role/min_exp.jpg); padding-left: 26px;font-style: italic; min-height:21px;}
 .icon-arc { background-image: url(../images/role/min_arc.jpg); padding-left: 16px; font-style: italic; min-height:21px;}
+.description{color: #FCC333; background-color:#006184; padding: 5px; font-weight: bold; }
