Quesito and public contents

--- a/app/views/editorial/quesito_full.html.erb
+++ b/app/views/editorial/quesito_full.html.erb
@@ -1,6 +1,6 @@
 <h2><%=l(:details_quesito)%></h2>
   In questa pagina:
-  <ul> 
+  <ul>
     <li>Presentazione di un quesito</li>
     <li>Vissualizzazione della risposta se STATO CHIUSO</li>
     <li>PERMESSI sulla vissualizzazione dei contenuti</li>
@@ -8,4 +8,11 @@
     <li>LINK: all'edizione dove è paruto</li>
     <li>NETWORK: Mi piace? --> futuro</li>
     <li>NETWORK: Commenta? --> futuro</li>
-  </ul> 
+  </ul>
+
+ --- for each articoli in quesiti_art
+      --> render _articolo_full
+
+      rendere domanda
+
+      puslòabnate tironti alla lista 
