--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -5,7 +5,7 @@
                              :html => {:multipart => true, :id => 'issue-form', :class => 'tabular new-issue-form'} do |f| %>
     <%= error_messages_for 'issue' %>
 
-    <% if @issue.quesito and !@issue.quesito.nil? %>
+    <% if @issue.quesito_news and !@issue.quesito_news.nil? %>
       <div class=""> <%#splitcontentright%>
         <fieldset class="box tabular">
           <legend><b><%=l(:label_issue_from_news)%></b></legend>
