mass rename .html.erb e+ form quesiti

--- a/app/views/editorial/quesiti.html.erb
+++ b/app/views/editorial/quesiti.html.erb
@@ -1,3 +1,4 @@
+<h2><%=l(:label_news_view_all)%></h2>
 <div class="fs-layout-cell fs-content clearfix">
   <% if @issues && @issues.any? %>
       <% @issues.each do |articolo| %>
