--- a/app/views/editorial/quesito.html.erb
+++ b/app/views/editorial/quesito.html.erb
@@ -1,4 +1,4 @@
-<h2><%=l(:details_quesito)%></h2>
+<h2><%=l(:label_news)%></h2>
   In questa pagina:
   <ul>
     <li>Presentazione di un quesito</li>
