--- a/app/views/editorial/quesito_new.html.erb
+++ b/app/views/editorial/quesito_new.html.erb
@@ -1,11 +1,54 @@
-<h2><%=l(:quesito_nuovo)%></h2>
+<h1 style="display:none" xmlns="http://www.w3.org/1999/html">quesito</h1>
+<%# if User.current && User.current.logged? %>
+  <div class="fs-layout-cell fs-content clearfix">
+    <article class="fs-post fs-article">
+      <div class="fs-postcontent fs-postcontent-0 clearfix">
+        <div class="fs-content-layout">
+          <div class="fs-content-layout-row">
+            <div class="fs-layout-cell layout-item-0" style="width: 99%">
+              <div id="fs-form-quesito-new">
+               <p> Se hai un dubbio sugli argomenti trattati, se ti serve approfondire un argomento specifico puoi fare una domanda in questa sezione. </p>
+                <p>Come abbonato a Fiscosport hai diritto a questo importante servizio; scrivi una domanda alla nostra redazione.<br /> Prenderemo spunto dal tuo quesito e ti risponderemo appena possibile attraverso uno o più  articoli
+                , che verranno pubblicati sul sito. Saranno accettati solo quesiti attinenti agli argomenti fiscali/sportivi e di pubblico interesse.</p>
 
-  <% form_tag( {:controller=>"editorial", :action=>"quesito_new" }) do %>
-      <%= hidden_field_tag :back_url, @backurl %>
-      <%= submit_tag 'Invia', :class => "fs-giallo-button", :confirm => 'Confermi?' %>
-<p><%= text_field_tag :title, :required => true, :size => 60 %></p>
-<p><%= text_area_tag :summary, :cols => 60, :rows => 2 %></p>
-<p><%= text_area_tag :description, :required => true, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
-    <%= f.error_messages %>
+                                <%# gravatar_for(User.current) %>
+              </div>
+              <h1><%= l(:label_news_new) %></h1>
+              <% form_tag({:controller => "editorial", :action => "quesito_new"}, :class => "input", :id => "fs-quesito-new", :method => "post") do %>
+                  <%= hidden_field_tag :back_url, @backurl %>
+                  <p><%# text_field_tag :title, :required => true, :size => 60 %></p>
+                  <div >
+                    <label>Oggetto </label>
+                    <span>  <%= text_area_tag 'subject', nil, :rows => 2, :cols => 25, :tabindex => '1' %>  </span>
+                  </div>
+                  <div>
+                    <label>Quesito </label>
+                    <span>  <%= text_area_tag 'subject', nil, :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
+                  </div>
+                  <div id="fs-form-quesito-new-btn">
+                  <%= submit_tag 'Invia', :class => "fs-giallo-button", :confirm => 'Confermi?' %>   </div>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br/>
+    </article>
 
-<% end %>
+    <br/>
+
+    <div class="clearfix"></div>
+  </div>
+<!--
+    <%# else %>
+    <h3 style="color:red;">
+    Gentile utente per porre quesiti a fiscosport occorre essere autenticati </h3>
+    <%=  User.current.to_s  %>
+    <%=  User.current.logged?.to_s  %>
+    <%# end %>
+-->
+  <%= render :partial => 'blocco_sidebar1' %>
+<%#sidebar a destra %>
+
+</div>
+
