--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -1084,7 +1084,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
     border-bottom: 1px solid #d3d3d3;
     border-top: 3px solid #afafaf;
     position: relative;
-    width: 100%;
+    width: 98%;
     display: block;
     margin: 10px;
 }
@@ -1105,7 +1105,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
     background: #ffffff;
     border-bottom: 3px solid #afafaf;
     position: relative;
-    width: 100%;
+    width: 98%;
     display: block;
     margin: 5px;
 }
@@ -1114,7 +1114,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
     width: 62%;
     display: inline-block;
 }
-
+#fs-reservation-del{
+    color: #b22222;
+    padding:1% 6%;
+    font-weight: bold;
+}
+#fs-reservation-del div{
+    display:inline-block;
+    float:right;
+}
 #reservation_num_persone {
     width: 20px;
     display: inline-block;
@@ -1166,7 +1174,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
     -moz-box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.2);
     box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.2);
     display: block;
-    width: 204px;
+    width: 214px;
     height: 34px;
     border-radius: 1px;
     -webkit-border-radius: 1px;
@@ -1176,13 +1184,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
     font-family: 'Allerta', arial, sans-serif;
     font-size: 15px;
     text-transform: uppercase;
+    position:relative;
 
 
 }
 
 .counter span {
     display: inline-block;
-    position: absolute;
     margin: 5px 0 0 2px;
 
 }
@@ -1198,7 +1206,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
     font-family: 'Allerta', arial, sans-serif;
     font-size: 15px;
     text-transform: uppercase;
-    margin-left: 102px;
+    position: absolute;
+    right:0;
+    top:0;
 }
 
 .counter_item span {
