--- a/app/views/editorial/edizioni.html.erb
+++ b/app/views/editorial/edizioni.html.erb
@@ -15,7 +15,7 @@
             </div>
         <% end %>
         <% if acur != aold %>
-            <h4 style="font-weight: bold;">Edizioni nell' anno <%= acur.to_s %> </h4>
+            <h4><span class="accordion">Edizioni nell' anno <%= acur.to_s %></span> </h4>
             <div>
         <% end %>
         <div class="fs-edizioni-all">
