--- a/app/views/editorial/quesiti_my.html.erb
+++ b/app/views/editorial/quesiti_my.html.erb
@@ -1,10 +1,29 @@
-<h2><%=l(:label_news_my)%></h2>
-  In questa pagina:
-  <ul> 
-    <li>Un utente definisce un titolo</li>
-    <li>Un utente immette un testo</li>
-    <li>AZIONE: SALVA ed allega all'editoriale in corso di elaborazione</li>
-  </ul>   chi sei ?
-<%=  User.current.to_s  %>
-sei loggato?
-<%=  User.current.logged?.to_s  %>
+<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+<% if @quesiti_news.nil? %>
+       <div> Non risultano quesiti posti da lei.
+       </div>
+   <% else %>
+      <article class="fs-article fs-post-quesiti">
+               <% @quesiti_news.each do |item| %>
+                   <div class="fs-convegni-border">
+                     <div class="fs-convegni-futuri-data">
+                                                <span><%= I18n.localize(item.created_on.to_date, :format => :giorno_mese_anno) %>&nbsp; </span>
+                     </div>
+                     <div class="fs-convegni-futuri">
+                      
+                       <span> <%= link_to(h(item.summary), :controller => 'editorial', :action => "evento", :id => item.id, :escape => false) %></span>
+     
+                       <p>
+                         <%= link_to(h(smart_truncate(item.description, 120)), :controller => 'editorial', :action => "evento", :id => item.id, :escape => false) %>
+                         <%= link_to "Più info ", url_for(:controller => 'editorial', :action => "quesito_show", :id => item.id, :escape => false), :class => "fs-giallo-inline-button" %></p>
+                       <br/>
+     
+                     </div>
+                     <div class="clearfix"></div>
+                   </div>
+               <% end %>
+             </article>
+         <% end %>
+ </div>
+<%= render :partial => 'blocco_sidebar1' %>
+<%#sidebar a destra %>
