--- a/public/stylesheets/jquery-ui-rewrite.css
+++ b/public/stylesheets/jquery-ui-rewrite.css
@@ -11,7 +11,7 @@
     cursor: pointer;
     position: relative;
     margin-top: 2px;
-    padding: 2px;
+    padding-left: 25px;
     zoom: 1
 }
 
@@ -122,7 +122,7 @@
 /* inizio  per EVENTI */
 /* rewrites jquery ui classes */
 #accordion-events {
-    width: 99%;
+    width: 100%;
 }
 
 /* inizio bootone inattivo */
