--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -754,7 +754,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 
 .fs-art-sezione-full {
-    color: #0512a1;
+    color: #003973;
     font-size: 12px;
     line-height: 22px;
     font-family: Arial, Helvetica, Sans-Serif;
@@ -912,7 +912,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     -moz-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
     box-shadow: 0 0 3px 2px rgba(238, 232, 170, 0.9);
    /* padding: 7px;                */
-    width: 99%;
+    width: 100%;
     margin-top: 7px;
 }
 
@@ -952,7 +952,7 @@ color: #000000;
       -webkit-box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.2);
       -moz-box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.2);
       box-shadow: 0 0 2px 2px rgba(0, 88, 132, 0.2);
-    border-bottom: solid 1px #FFE363;
+    border-bottom: solid 1px #e6d279;
       -webkit-border-radius: 1px;
       -opera-border-radius: 1px;
       -moz-border-radius: 1px;
@@ -1233,6 +1233,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
  padding-top: 3%;
     text-align: center;
 }
+
+.fs-post-quesiti {
+
+    background: #FFFFFF;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    border-radius: 1px;
+    -webkit-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
+    -moz-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
+    box-shadow: 0 0 3px 2px rgba(238, 232, 170, 0.9);
+   /* padding: 7px;                */
+   padding:10px;
+    margin-top: 7px;
+    width: 98%;
+
+}
+
 /* ---       fine quesiti         --*/
 /* inizio slide */
 .fs-slidecontainerslideshutterstock_1 {
