--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -1,58 +1,101 @@
- <% if User.current && User.current.logged? %>
+<% if User.current && User.current.logged? %>
     <div class="fs-layout-cell fs-content clearfix">
       <article class="fs-post fs-article">
         <div class="fs-postcontent fs-postcontent-0 clearfix">
           <div class="fs-content-layout">
             <div class="fs-content-layout-row">
               <div class="fs-layout-cell layout-item-0" style="width: 99%">
-               <% case @quesito_news_stato_num
-                  when 0 %>
-                    <h5>Status: <%= @quesito_news_stato %> </h5>
-                    <h3>Il suo questito verrà esaminato dalla redazione appena possibile.</h3>
-                    <p>Se desidera puo' apportare modifiche alla sua richiesta e sallvi con il pulsante  </p>
+                <% case @quesito_news_stato_num
+                     when 0 %>
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-0"></div>
+                    <h3>Il suo quesito verrà esaminato dalla redazione appena possibile.</h3>
 
-                    <% form_tag({:controller => "editorial", :action => "quesito_edit", :id=> @quesito_news.id ,:method => "post"}, :class => "input", :id => "fs-quesito-new") do %>
+                    <p>Se desidera puo' apportare modifiche alla sua richiesta e sallvi con il pulsante </p>
+
+                    <% form_tag({:controller => "editorial", :action => "quesito_edit", :id => @quesito_news.id, :method => "post"}, :class => "input", :id => "fs-quesito-new") do %>
                         <div>
                           <label>Oggetto </label>
-                          <span>  <%= text_area_tag :summary, @quesito_news.summary , :rows => 2, :cols => 25, :tabindex => '1' %>  </span>
+                          <span>  <%= text_area_tag :summary, @quesito_news.summary, :rows => 2, :cols => 25, :tabindex => '1' %>  </span>
                         </div>
                         <div>
                           <label>Quesito </label>
-                          <span>  <%= text_area_tag :description, @quesito_news.description,  :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
+                          <span>  <%= text_area_tag :description, @quesito_news.description, :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
                         </div>
                         <div id="fs-form-quesito-new-btn">
-                          <%= submit_tag 'Salva', :class => "fs-giallo-button", :confirm => 'Confermi le modifiche?' %>   </div>
+                          <%= submit_tag 'Salva', :class => "fs-giallo-button", :confirm => 'Confermi le modifiche?' %> &nbsp; <%= link_to('Indietro', quesiti_my_path, :class => "fs-giallo-button") %>   </div>
                     <% end %>
                     <%= render :partial => 'flash' %>
                 <% when 1 %>
-                <h2> <%=  @quesito_news_stato.to_s %> </h2>
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-1"></div>
+                    <h3>Il suo quesito è in esame dalla redazione e non è più modificabile.</h3>
 
-                                 <% form_tag({:controller => "editorial", :action => "quesito_create", :method => "get"}, :class => "input", :id => "fs-quesito-new") do %>
-                                     <div>
-                                       <label>Oggetto </label>
-                                       <span>  <%= text_area 'quesito','summary',  :rows => 2, :cols => 25, :tabindex => '1' %>  </span>
-                                     </div>
-                                     <div>
-                                       <label>Quesito </label>
-                                       <span>  <%= text_area 'quesito','description',  :rows => 10, :cols => 25, :tabindex => '2' %>  </span>
-                                     </div>
-                                     <div id="fs-form-quesito-new-btn">
-                                       <%= submit_tag 'Invia', :class => "fs-giallo-button", :confirm => 'Confermi?' %>   </div>
-                                 <% end %>
+                    <p>Ritorni a breve per vedere se il suo quesito è stato accettato o rifuitato, grazie.</p>
+                    <% form_tag({}, :class => "input", :id => "fs-quesito-new") do %>
+                        <div>
+                          <label>Oggetto </label>
+                          <span>  <%= text_area_tag :summary, @quesito_news.summary, :rows => 2, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div>
+                          <label>Quesito </label>
+                          <span>  <%= text_area_tag :summary, @quesito_news.description, :rows => 10, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div id="fs-form-quesito-new-btn">
+                          <%= link_to('Indietro', quesiti_my_path, :class => "fs-rosso-button") %>
+                        </div>
+                    <% end %>
                 <% when 2 %>
-                     <h2> <%= @quesito_news_stato_num.to_s  %></h2>
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-2"></div>
+                    <h3>Il suo quesito è stato rifiutato dalla redazione.</h3>
+
+                    <p>Non è stato possibile accettare il suo quesito, legga la motivazione nel campo sotto.</p>
+                    <% form_tag({}, :class => "input", :id => "fs-quesito-new") do %>
+                        <div>
+                          <label>Oggetto </label>
+                          <span>  <%= text_area_tag :summary, @quesito_news.summary, :rows => 2, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div>
+                          <label>Quesito </label>
+                          <span>  <%= text_area_tag :description, @quesito_news.description, :rows => 10, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div>
+                          <label style="color:red; font-weight: bold;">Motivazione</label>
+                          <span style="color:red; font-weight: bold;">  <%= text_area_tag :summary, @quesito_news.description, :rows => 10, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div id="fs-form-quesito-new-btn">
+                          <%= link_to('Indietro', quesiti_my_path, :class => "fs-rosso-button") %>
+                        </div>
+                    <% end %>
 
                 <% when 3 %>
-                             <h2> <%=@quesito_news_stato_num.to_s  %></h2>
+                    <div class="fs-quesiti-status-icon fs-quesiti-status-3"></div>
+                    <h3>Il suo quesito è stato accettato dalla redazione.</h3>
+                    <p>Nelle prossime edizioni verranno pubblicati uno o più articoli che attinenti al suo quesito, grazie.</p>
+                    <% form_tag({}, :class => "input", :id => "fs-quesito-new") do %>
+                        <div>
+                          <label>Oggetto </label>
+                          <span>  <%= text_area_tag :summary, @quesito_news.summary, :rows => 2, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div>
+                          <label>Quesito </label>
+                          <span>  <%= text_area_tag :description, @quesito_news.description, :rows => 10, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div>
+                          <label style="color:red; font-weight: bold;">Motivazione</label>
+                          <span>  <%= text_area_tag :description, @quesito_news.description, :rows => 10, :cols => 25, :disabled => true %>  </span>
+                        </div>
+                        <div id="fs-form-quesito-new-btn">
+                          <%= link_to('Indietro', quesiti_my_path, :class => "fs-blu-button") %>
+                        </div>
+                    <% end %>
                 <% when 4 %>
-                             <h2><%= @quesito_news_stato_num.to_s  %></h2>
+                    <h2><%= @quesito_news_stato_num.to_s %></h2>
                 <% when 9 %>
-                             <h2><%= @quesito_news_stato_num.to_s  %></h2>
-                 <% else  %>
-                case else???
+                    <h2><%= @quesito_news_stato_num.to_s %></h2>
+                <% else %>
+                    case else???
 
 
-               <% end  %>
+                <% end %>
 
 
                 <%= render :partial => 'flash' %>
