--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1334,9 +1334,9 @@ input[type="text"], input[type="password"], input[type="email"], input[type="url
 input[type="text"], input[type="password"], input[type="email"], input[type="url"], textarea
 {
    width: 100%;
-   padding: 4px 0;
+   padding: 5px;
    color: #00678C !important;
-   font-size: 11px;
+   font-size: 12px;
    font-family: Arial, Helvetica, Sans-Serif;
    font-weight: bold;
    font-style: normal;
@@ -1350,7 +1350,7 @@ input.fs-error, textarea.fs-error
 }
 input.fs-error, textarea.fs-error {
    color: #00678C !important;
-   font-size: 11px;
+   font-size: 12px;
    font-family: Arial, Helvetica, Sans-Serif;
    font-weight: bold;
    font-style: normal;
